# cv_project

./: .gitignore  Notes for Mikko meeting.txt  TODO 07.09.2017  TODO 07.09.2017.txt
Code/: CMakeLists.txt
Code/catkin_ws/: record_demo_rosbag
Code/catkin_ws/src/: howToUseThisPackage.txt  joystick_control  notes_joystick_kinect
Code/catkin_ws/src/PioneerModel/objects/: CMakeLists.txt  package.xml
Code/catkin_ws/src/PioneerModel/objects/data/: banana.urdf  banana.urdf~
Code/catkin_ws/src/PioneerModel/objects/data/ball/: ball.urdf  ball_downsampled.pcd
Code/catkin_ws/src/PioneerModel/objects/data/banana/: banana.urdf  banana_downsampled.pcd
Code/catkin_ws/src/PioneerModel/objects/data/bleach_cleanser/: bleach_cleanser.urdf  bleach_cleanser_downsampled.pcd
Code/catkin_ws/src/PioneerModel/objects/data/bowl/: bowl.urdf  bowl_downsampled.pcd
Code/catkin_ws/src/PioneerModel/objects/data/cracker_box/: cracker_box.urdf  cracker_box_downsampled.pcd
Code/catkin_ws/src/PioneerModel/objects/data/hammer/: hammer.urdf  hammer_downsampled.pcd
Code/catkin_ws/src/PioneerModel/objects/data/mug/: mug.urdf  mug_downsampled.pcd
Code/catkin_ws/src/PioneerModel/objects/data/pitcher_base/: pitcher_base.urdf  pitcher_base_downsampled.pcd
Code/catkin_ws/src/PioneerModel/objects/data/potted_meat_can/: potted_meat_can .urdf~  potted_meat_can.urdf  potted_meat_can_downsampled.pcd
Code/catkin_ws/src/PioneerModel/p3dx_description/launch/: config.rviz  everything.launch  everything_backup.launch  rviz.launch
Code/catkin_ws/src/PioneerModel/p3dx_description/urdf/: convertXacroToUrdf  pioneer3dx.gazebo  pioneer3dx.xacro  pioneer3dx.xml  pioneer3dx_camera.gazebo
Code/catkin_ws/src/PioneerModel/p3dx_gazebo/launch/: gazebo.launch
Code/catkin_ws/src/PioneerModel/p3dx_gazebo/worlds/: 4cubes.world  4cubes_plus.world  testing_room.world  testing_room_with_few_objects.world  testing_room_with_objects.world  testing_room_with_objects2.world
Code/catkin_ws/src/PioneerModel/p3dx_navigation/: CMakeLists.txt  package.xml
Code/catkin_ws/src/PioneerModel/p3dx_navigation/config/: p3dx_base_local_planner_params.yaml  p3dx_costmap_common_params.yaml
Code/catkin_ws/src/PioneerModel/p3dx_navigation/launch/: move_base.launch
Code/catkin_ws/src/PioneerModel/p3dx_navigation/maps/: map.pgm  map.yaml
Code/catkin_ws/src/candidate_locator/: CMakeLists.txt  camera_parameters_simulation.txt  package.xml  readme.md
Code/catkin_ws/src/candidate_locator/include/: candidate_locator.h
Code/catkin_ws/src/candidate_locator/launch/: candidate_locator.launch  servers.launch
Code/catkin_ws/src/candidate_locator/msg/: ArrayPointClouds.msg
Code/catkin_ws/src/candidate_locator/src/: candidate_locator.cpp  candidate_locator_client.cpp  candidate_locator_node.cpp  candidate_locator_server.cpp
Code/catkin_ws/src/candidate_locator/srv/: LocateCandidates.srv
Code/catkin_ws/src/depthimage_to_laserscan/launch/: sample_node.launch
Code/catkin_ws/src/evaluation/: CMakeLists.txt  experiment_setup  further_experiments  package.xml
Code/catkin_ws/src/evaluation/launch/: eval.launch  experiments.launch  restart.launch  servers.launch
Code/catkin_ws/src/evaluation/src/: cheater.cpp  evaluation_client.cpp  evaluation_server.cpp  experiments  restart  transform_publisher.cpp
Code/catkin_ws/src/evaluation/srv/: CompareGroundTruthsToProposals.srv  Evaluate.srv
Code/catkin_ws/src/evaluation/statistics_pdb_1/: detailed_experiment  experiment
Code/catkin_ws/src/evaluation/statistics_pdb_2/: experiment
Code/catkin_ws/src/evaluation/statistics_pdb_4/: experiment
Code/catkin_ws/src/frontier_exploration/: CMakeLists.txt  package.xml
Code/catkin_ws/src/frontier_exploration/include/frontier_exploration/: bounded_explore_layer.h  costmap_tools.h  frontier_search.h
Code/catkin_ws/src/frontier_exploration/launch/: global_map.launch
Code/catkin_ws/src/frontier_exploration/plugins/: bounded_explore_layer.cpp
Code/catkin_ws/src/frontier_exploration/src/: explore_client.cpp  explore_server.cpp  frontier_search.cpp
Code/catkin_ws/src/frontier_exploration/srv/: RequestLabelCertainties.srv
Code/catkin_ws/src/iai_kinect2/kinect2_bridge/launch/: kinect2_bridge.launch
Code/catkin_ws/src/object_candidates/: CMakeLists.txt  package.xml
Code/catkin_ws/src/object_candidates/include/: OBJECT_CANDIDATES.h  listener.h
Code/catkin_ws/src/object_candidates/include/egbis/: convolve.h  filter.h  imconv.h  segment-image.h
Code/catkin_ws/src/object_candidates/launch/: servers.launch  snap.launch
Code/catkin_ws/src/object_candidates/msg/: SnapshotMsg.msg
Code/catkin_ws/src/object_candidates/src/: egbis.cpp  generate_object_candidates.cpp  listener.cpp  listener_node.cpp  object_candidates_node.cpp  object_candidates_server.cpp  snapshot_client.cpp  snapshot_server.cpp
Code/catkin_ws/src/object_candidates/src/egbis/: disjoint-set.cpp  filter.cpp  misc.cpp  segment-graph.cpp  segment-image.cpp
Code/catkin_ws/src/object_candidates/srv/: Objectcandidates.srv  Snapshot.srv
Code/catkin_ws/src/octomap_mapping/octomap_server/: CMakeLists.txt  debug_config.conf
Code/catkin_ws/src/octomap_mapping/octomap_server/launch/: octomap_mapping.launch
Code/catkin_ws/src/octomap_mapping/octomap_server/src/: CandidatesOctomapServer.cpp  OctomapServer.cpp
Code/catkin_ws/src/octomap_msgs/: CMakeLists.txt  package.xml
Code/catkin_ws/src/octomap_msgs/srv/: MergeCandidates.srv
Code/catkin_ws/src/pointcloud_to_laserscan/launch/: sample_node.launch
Code/catkin_ws/src/simple_navigation_goals/: CMakeLists.txt  package.xml
Code/catkin_ws/src/simple_navigation_goals/src/: simple_navigation_goals.cpp
Code/other/salObj/datasets/imgs/imgsal/: Thumbs.db
Code/src/: objectDiscovery.cpp
Code/src/opencv-wrapper-egbis/: egbis.h
Code/src/opencv-wrapper-egbis/egbis/: segment-image.cpp~  segment-image.h  segment-image.h~
Code/src/pioneer-world/: pioneer2dx_kinect.world
Code/src/vocus2-version1.1/: CMakeLists.txt  Readme.txt
Code/src/vocus2-version1.1/src/: main.cpp~  objectDiscovery.cpp~
EXPO/: further_details  toDo  (+1 more)
(+50 files in other folders)
